# keuzewijzeraardgasvrij-backend

./: .env  .pre-commit-config.yaml  Makefile  README.md  docker-compose.local.yml  docker-compose.override.yml  docker-compose.yml
app/: Dockerfile  pyproject.toml
app/apps/auditlog/: admin.py  apps.py  models.py
app/apps/auditlog/migrations/: 0001_initial.py
app/apps/calculation_inputs/: admin.py  apps.py  models.py  serializers.py  views.py
app/apps/calculation_inputs/migrations/: 0001_initial.py
app/apps/calculation_inputs/tests/: test_api.py
app/apps/calculations/: admin.py  apps.py  calculator.py  dso_client.py  models.py  pdok_client.py  serializers.py  subsysteem_calculations.py  views.py
app/apps/calculations/fixtures/: fixtures.json
app/apps/calculations/migrations/: 0002_conversie.py  0003_alter_calculationinput_bruto_vloeroppervlak_and_more.py  0004_calculationinput_koken_op_gas.py  0005_calculationdashboard.py  0006_energyprice.py  0007_rename_models_to_dutch.py  0008_remove_gebruikersinvoer_gasverbruik_per_woning.py  0009_gebruikersinvoer_dubbel_glas_and_more.py  0010_gebruikersinvoer_buurtcode_and_more.py  0011_gebruikersinvoer_beschikbare_collectieve_ruimte_binnen_m2_and_more.py  0012_gebruikersinvoer_huidig_systeem.py  0013_remove_gebruikersinvoer_elektriciteitsverbruik_per_woning_and_more.py  (+3 more)
app/apps/kengetallen/: admin.py  apps.py  models.py
app/apps/systemen/: admin.py  apps.py  models.py
app/apps/users/: admin.py  auth.py
app/config/: asgi.py  logging.py  settings.py  urls.py  wsgi.py
app/deploy/: docker-entrypoint.sh
(+48 files in other folders)
