[project]
name = "keuzewijzeraardgasvrij-backend"
version = "0.1.0"
description = "Keuzewijzer Aardgasvrij"
authors = [{ name = "Gemeente Amsterdam", email = "datapunt@amsterdam.nl" }]
readme = "../README.md"
requires-python = "~=3.13"
packages = [{ include = "apps" }]
dependencies = [
    "azure-identity~=1.25",
    "azure-monitor-opentelemetry~=1.8",
    "debugpy~=1.8",
    "Django~=6.0",
    "django-cors-headers~=4.7",
    "django-filter~=25.0",
    "djangorestframework~=3.15",
    "djangorestframework-simplejwt~=5.5",
    "drf-spectacular~=0.27",
    "flake8~=7.0",
    "inflection~=0.5",
    "jsonschema~=4.24",
    "jsonschema-specifications~=2024.10",
    "model-bakery~=1.18",
    "mozilla-django-oidc~=4.0",
    "pre-commit~=3.0",
    "psycopg2-binary~=2.9",
    "python-magic~=0.4",
    "referencing~=0.36",
    "rpds-py~=0.26",
    "uritemplate~=4.1",
    "watchdog~=6.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=3.3.3,<4.0.0)"
]
